--- a/movicar/package.json
+++ b/movicar/package.json
@@ -41,5 +41,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
+  },
+  "engines": {
+    "node": "16.13.1",
+    "npm": "7.24.0"
   }
 }
